Updated 1 file via CloudCannon.

--- a/meetings-and-events.html
+++ b/meetings-and-events.html
@@ -31,9 +31,9 @@ blocks:
             beachfront location, coupled with the above and beyond nature of
             Regent service, will assure a memorable event.</p>
         bottom-text:
-                block-content-html: 
-                    links:
-                    - 
+            block-content-html:
+                links:
+                    -
                         text: +62 361 201 9999
                         url: tel:623612019999
                     -
@@ -48,8 +48,8 @@ blocks:
         _id: banner-split-video
         block-content-html: >-
             <h3 class="sub-heading">WEDDINGS AT REGENT BALI CANGGU</h3><h2
-            class="heading-lg">A breathtaking beachside
-            wedding</h2><p>Once-in-a-lifetime weddings deserve extraordinary
+            class="heading-lg">A Breathtaking Beachside
+            Wedding</h2><p>Once-in-a-lifetime weddings deserve extraordinary
             settings and breathtaking backdrops. Exchange vows surrounded by
             your closest confidants, family, and friends in a seaside sanctuary
             where every detail is designed to inspire awe and serenity. Whether
@@ -78,10 +78,10 @@ blocks:
         _id: horizontal-scroll-spaces
         block-content-html: >-
             <h3>WEDDINGS &amp; EVENTS</h3><p> </p><h2
-            class="large-heading">Inspiring spaces</h2><p">Host with distinction
+            class="large-heading">Inspiring Spaces</h2><p">Host with distinction
             at Regent Bali Canggu, where timeless design and thoughtful service
             set the stage for inspired occasions, from intimate boardroom
-            meetings to unforgettable weddings.<p></p></p">
+            meetings to unforgettable weddings.<p></p></p"><p></p>
         image-width: max(40%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
@@ -126,7 +126,17 @@ blocks:
         color-scheme: base
     -
         _id: banner-split-video
-        block-content-html: "<h3 class=\"sub-heading\">PRIVATE &amp; CORPORATE EVENTS</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Host with distinction at Regent Bali Canggu, where timeless design and thoughtful service set the stage for inspired occasions, from intimate boardroom meetings to unforgettable weddings. Enjoy 10% off your master bill when booking by 31 August 2025 (or 5% for non-members) for events held by 30 March 2026. <br /><br />Enhance the experience further with our global offer, earn 3X IHG One Rewards points and receive 2 Bonus Elite Night Credits when booking by 30 June 2025 for events taking place by 30 November 2025.</p>"
+        block-content-html: >-
+            <h3 class="sub-heading">PRIVATE &amp; CORPORATE EVENTS</h3><h2
+            class="heading-lg">Above the Ocean, Beyond the Ordinary</h2><p>Host
+            with distinction at Regent Bali Canggu, where timeless design and
+            thoughtful service set the stage for inspired occasions, from
+            intimate boardroom meetings to unforgettable weddings. Enjoy 10% off
+            your master bill when booking by 31 August 2025 (or 5% for
+            non-members) for events held by 30 March 2026. <br /><br />Enhance
+            the experience further with our global offer, earn 3X IHG One
+            Rewards points and receive 2 Bonus Elite Night Credits when booking
+            by 30 June 2025 for events taking place by 30 November 2025.</p>
         background-desktop-image: /uploads/desktop-banner.jpg
         background-mobile-image: /uploads/desktop-banner.jpg
         videos:
