Updated 2 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ blocks:
                     Save up to 10% and earn 3X points with IHG Business Rewards.
                     Limited-time offers for events at Regent Bali Canggu.
                 button-text: ENQUIRE
-                link: events@regentbalicanggu.com
+                link: mailto:events@regentbalicanggu.com
             -
                 nav-heading: Spa & Wellness
                 heading: Sense of harmony
