--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -342,6 +342,8 @@ blocks:
                         tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
+    - 
+        _id: booking
     -
         _id: slider
         block-content-html: >-
