Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@ blocks:
     -
         _id: banner-split-video
         block-content-html: >-
-            <h2 class="heading-lg">REGENT CLUB</h2><h3
-            class="sub-heading"></h3>Above the Ocean, Beyond the
-            Ordinary</h3><p>A sanctuary reserved for those who seek time, space,
-            and effortless privilege. At the Regent Club, days unfold with quiet
-            abundance. Guests enjoy refined all-day culinary offerings and a
-            carefully curated selection of premium wines and spirits,
-            accompanied by afternoon tea rituals and evening cocktails served
-            with champagne.</p><p>You are invited to join intimate cultural
-            experiences, relax within serene adults-only cabanas, and unwind by
-            the private infinity pool, a peaceful setting designed for moments
-            of stillness and unhurried comfort.</p>
+            <h3>REGENT CLUB</h3><h2 class="heading-lg">Above the Ocean, Beyond
+            the Ordinary</h2><p>A sanctuary reserved for those who seek time,
+            space, and effortless privilege. At the Regent Club, days unfold
+            with quiet abundance. Guests enjoy refined all-day culinary
+            offerings and a carefully curated selection of premium wines and
+            spirits, accompanied by afternoon tea rituals and evening cocktails
+            served with champagne.</p><p>You are invited to join intimate
+            cultural experiences, relax within serene adults-only cabanas, and
+            unwind by the private infinity pool, a peaceful setting designed for
+            moments of stillness and unhurried comfort.</p>
         background-desktop-image: /uploads/desktop-banner-1.jpg
         background-mobile-image: /uploads/desktop-banner-1.jpg
         videos:
