--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -28,7 +28,7 @@ blocks:
             oceanside havens, including those with unrivalled sea or garden
             vistas, direct lagoon-access, as well as a variety of suites,
             two-bedroom penthouses and expansive villas with private
-            pools.</p><p><a class="button-featured" href="#">RESERVE NOW</a></p>
+            pools.</p><p><a class="button-featured" href="/SUITES-and-VILLAS#booking-section">RESERVE NOW</a></p>
         content-max-width: 700px
         text-alignment: center
         color-scheme: base
