--- a/Wellness.html
+++ b/Wellness.html
@@ -47,7 +47,7 @@ blocks:
             elevated. Each step is guided by a clear intent to heal, weaving
             vibrating crystal energy, soothing aromas, and restoring light
             frequency to uplift wellbeing to new personal heights.</p> <p><a
-            class="button-featured" href="">reserve now</a></p>
+            class="button-featured" href="/SUITES-and-VILLAS#booking-section">reserve now</a></p>
         background-desktop-image: /uploads/sense-of-harmony.jpg
         background-mobile-image: /uploads/sense-of-harmony.jpg
         videos:
