--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ blocks:
             margin-bottom:2rem;"><h3 class="mt-8">Jl. Pantai Batu Bolong No. 93
             xx <br />Canggu, Kuta Utara<br />Badung, Bali,
             Indonesia</h3></div></p><p></p><p></p><a class="button-featured"
-            href="#"> RESERVE NOW</a>
+            href="/SUITES-and-VILLAS#booking-section"> RESERVE NOW</a>
         bottom-text:
             links:
                 -
