Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@ blocks:
                 image: /uploads/regent-bali-8738348469-original.avif
                 imag-alt:
                 text: >-
-                    Discover Regent Club, an exclusive private sanctuary and
-                    luxury residential retreat with bespoke service on your
-                    terms. Amidst sweeping harbourviews, delight in moments of
-                    decadence each day with immersive breakfast, afternoon tea
-                    and evening cocktail experiences. Unwind, recharge and be
-                    indulged in this elevated Personal Haven.
+                    Serene and thoughtful, the Regent Spa taps into Bali’s
+                    wealth of health and wellness practices, offering scrubs,
+                    wraps and massages, as well as up-to-the-minute skincare
+                    treatments. The spa features seven restorative treatment
+                    rooms, including one indulgent couples suite, sauna, and
+                    plunge pool. Anticipated opening October 2025.
                 button-text: LEARN MORE
                 link: https://jazzy-boombox.cloudvent.net/Wellness.html
             -
