--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ blocks:
                 background-desktop-image: /uploads/taru1.jpg
                 background-mobile-image: /uploads/taru1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Taru</h2><p>The signature culinary
+                    <h3 class="large-heading-serif">Taru</h2><p>The signature culinary
                     destination of the resort, Taru offers an immersive dining
                     experience, through reinvented authentic flavours of
                     essential Indonesian dishes, innovated by touches of modern
@@ -245,7 +245,7 @@ blocks:
                 background-desktop-image: /uploads/beach-house-1.jpg
                 background-mobile-image: /uploads/beach-house-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Beach House</h2><p>A stunning
+                    <h3 class="large-heading-serif">Beach House</h2><p>A stunning
                     addition to the Canggu coastline, the Beach House lures with
                     its shimmering pool, and ocean breeze. An ideal setting for
                     craft cocktails and the delicate flavours of the
@@ -256,7 +256,7 @@ blocks:
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Sazón<p>Led by award-winning Chef
+                    <h3 class="large-heading-serif">Sazón<p>Led by award-winning Chef
                     Andrew Walsh, experience the neighborhood Mediterranean
                     hideaway on Batu Bolong, where vibrant atmosphere meets
                     authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00
