updated rooms block

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -56,8 +56,8 @@ blocks:
                             thoughtful moments with a complimentary refreshment
                             gallery.
                         images:
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/studio-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/studio-suites.jpg
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
                         name: Lagoon Access Twin
@@ -80,8 +80,8 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - /uploads/studio-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/studio-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
@@ -105,7 +105,7 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         tour-pic: /uploads/tour-placeholder.avif
                         images:
-                            - /uploads/studio-suites.jpg
+                            - image: /uploads/studio-suites.jpg
             -
                 heading: ONE BEDROOM SUITE
                 rooms:
@@ -123,9 +123,9 @@ blocks:
                             for soaking in the surroundings. With two nights or
                             more enjoy a 60-minute signature massage for two.
                         images:
-                            - /uploads/one-bedroom-suites.jpg
-                            - /uploads/one-bedroom-suites.jpg
-                            - /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
@@ -148,9 +148,9 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - /uploads/one-bedroom-suites.jpg
-                            - /uploads/one-bedroom-suites.jpg
-                            - /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
@@ -174,9 +174,9 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - /uploads/one-bedroom-suites.jpg
-                            - /uploads/one-bedroom-suites.jpg
-                            - /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
+                            - image:  /uploads/one-bedroom-suites.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: TWO BEDROOM SUITE
@@ -197,9 +197,9 @@ blocks:
                             generous spaces, private terraces, and bathrooms
                             that reflect Bali’s artisanal heritage.
                         images:
-                            - /uploads/two-bedroom-suites.jpg
-                            - /uploads/two-bedroom-suites.jpg
-                            - /uploads/two-bedroom-suites.jpg
+                            - image:  /uploads/two-bedroom-suites.jpg
+                            - image:  /uploads/two-bedroom-suites.jpg
+                            - image:  /uploads/two-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
@@ -222,9 +222,9 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - /uploads/two-bedroom-suites.jpg
-                            - /uploads/two-bedroom-suites.jpg
-                            - /uploads/two-bedroom-suites.jpg
+                            - image:  /uploads/two-bedroom-suites.jpg
+                            - image:  /uploads/two-bedroom-suites.jpg
+                            - image:  /uploads/two-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
@@ -246,9 +246,9 @@ blocks:
                             king bed, and a bathroom that pays homage to
                             Balinese craft and detail.
                         images:
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
@@ -261,9 +261,9 @@ blocks:
                             -
                         content: ''
                         images:
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/tour-placeholder.avif
                     -
                         name: Garden View King
@@ -276,9 +276,9 @@ blocks:
                             -
                         content: ''
                         images:
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
-                            - /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            - image:  /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: PRIVATE villas
@@ -300,9 +300,9 @@ blocks:
                             into your outdoor living space, the rhythm of the
                             waves becomes a backdrop to your peaceful haven.
                         images:
-                            - /uploads/private-beach-villa.jpg
-                            - /uploads/private-beach-villa.jpg
-                            - /uploads/private-beach-villa.jpg
+                            - image:  /uploads/private-beach-villa.jpg
+                            - image:  /uploads/private-beach-villa.jpg
+                            - image:  /uploads/private-beach-villa.jpg
                         tour-pic: /uploads/beachvilla-floorplan.jpeg
                     -
                         name: Garden Pool Villa
@@ -314,9 +314,9 @@ blocks:
                             - ''
                         content: ''
                         images:
-                            - /uploads/private-beach-villa.jpg
-                            - /uploads/private-beach-villa.jpg
-                            - /uploads/private-beach-villa.jpg
+                            - image:  /uploads/private-beach-villa.jpg
+                            - image:  /uploads/private-beach-villa.jpg
+                            - image:  /uploads/private-beach-villa.jpg
                         tour-pic: /uploads/regentbalicanggu-gardenvilla-1.jpeg
             -
                 heading: PENTHOUSE
@@ -338,7 +338,7 @@ blocks:
                             shower, and refined ensuite, while the terrace and
                             cabana set the stage for sunset views.
                         images:
-                            - /uploads/penthouse.jpg
+                            - image:  /uploads/penthouse.jpg
                         tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
