--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -57,8 +57,10 @@ blocks:
                             thoughtful moments with a complimentary refreshment
                             gallery.
                         images:
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/studio-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/studio-suites.jpg
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
                         name: Lagoon Access Twin
@@ -81,8 +83,10 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - image:  /uploads/studio-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/studio-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
@@ -106,7 +110,8 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         tour-pic: /uploads/tour-placeholder.avif
                         images:
-                            - image: /uploads/studio-suites.jpg
+                            -
+                                image: /uploads/studio-suites.jpg
             -
                 heading: ONE BEDROOM SUITE
                 rooms:
@@ -124,9 +129,12 @@ blocks:
                             for soaking in the surroundings. With two nights or
                             more enjoy a 60-minute signature massage for two.
                         images:
-                            - image:  /uploads/one-bedroom-suites.jpg
-                            - image:  /uploads/one-bedroom-suites.jpg
-                            - image:  /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
@@ -149,9 +157,12 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - image:  /uploads/one-bedroom-suites.jpg
-                            - image:  /uploads/one-bedroom-suites.jpg
-                            - image:  /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
@@ -175,9 +186,12 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - image:  /uploads/one-bedroom-suites.jpg
-                            - image:  /uploads/one-bedroom-suites.jpg
-                            - image:  /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: TWO BEDROOM SUITE
@@ -198,9 +212,12 @@ blocks:
                             generous spaces, private terraces, and bathrooms
                             that reflect Bali’s artisanal heritage.
                         images:
-                            - image:  /uploads/two-bedroom-suites.jpg
-                            - image:  /uploads/two-bedroom-suites.jpg
-                            - image:  /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/two-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
@@ -223,9 +240,12 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         images:
-                            - image:  /uploads/two-bedroom-suites.jpg
-                            - image:  /uploads/two-bedroom-suites.jpg
-                            - image:  /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/two-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
@@ -247,9 +267,12 @@ blocks:
                             king bed, and a bathroom that pays homage to
                             Balinese craft and detail.
                         images:
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
@@ -262,9 +285,12 @@ blocks:
                             -
                         content: ''
                         images:
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/tour-placeholder.avif
                     -
                         name: Garden View King
@@ -277,9 +303,12 @@ blocks:
                             -
                         content: ''
                         images:
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
-                            - image:  /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: PRIVATE villas
@@ -301,9 +330,12 @@ blocks:
                             into your outdoor living space, the rhythm of the
                             waves becomes a backdrop to your peaceful haven.
                         images:
-                            - image:  /uploads/private-beach-villa.jpg
-                            - image:  /uploads/private-beach-villa.jpg
-                            - image:  /uploads/private-beach-villa.jpg
+                            -
+                                image: /uploads/private-beach-villa.jpg
+                            -
+                                image: /uploads/private-beach-villa.jpg
+                            -
+                                image: /uploads/private-beach-villa.jpg
                         tour-pic: /uploads/beachvilla-floorplan.jpeg
                     -
                         name: Garden Pool Villa
@@ -315,9 +347,12 @@ blocks:
                             - ''
                         content: ''
                         images:
-                            - image:  /uploads/private-beach-villa.jpg
-                            - image:  /uploads/private-beach-villa.jpg
-                            - image:  /uploads/private-beach-villa.jpg
+                            -
+                                image: /uploads/private-beach-villa.jpg
+                            -
+                                image: /uploads/private-beach-villa.jpg
+                            -
+                                image: /uploads/private-beach-villa.jpg
                         tour-pic: /uploads/regentbalicanggu-gardenvilla-1.jpeg
             -
                 heading: PENTHOUSE
@@ -339,7 +374,8 @@ blocks:
                             shower, and refined ensuite, while the terrace and
                             cabana set the stage for sunset views.
                         images:
-                            - image:  /uploads/penthouse.jpg
+                            -
+                                image: /uploads/penthouse.jpg
                         tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
