Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -58,9 +58,13 @@ blocks:
                             gallery.
                         images:
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: /uploads/rooms/Studio-Suites-Ocean-View.jpg
                             -
-                                image: /uploads/studio-suites.jpg
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Livingroom.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
                         name: Lagoon Access Twin
