Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -88,9 +88,14 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         images:
                             -
-                                image: /uploads/studio-suites.jpg
+                                image: >-
+                                    /uploads/rooms/Studio-Suite-Lagoon-Access-Terrace.JPG
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Lagoon-Access-Terrace.JPG
+                            -
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Lagoon-Access.jpg
                         tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
@@ -115,7 +120,9 @@ blocks:
                         tour-pic: /uploads/tour-placeholder.avif
                         images:
                             -
-                                image: /uploads/studio-suites.jpg
+                                image: /uploads/rooms/Studio-Suites-King-Bed.jpg
+                            -
+                                image: ''
             -
                 heading: ONE BEDROOM SUITE
                 rooms:
