Updated 3 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -61,9 +61,6 @@ blocks:
                                 image: /uploads/rooms/Studio-Suites-Ocean-View.jpg
                             -
                                 image: >-
-                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Livingroom.jpg
-                            -
-                                image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
@@ -121,8 +118,6 @@ blocks:
                         images:
                             -
                                 image: /uploads/rooms/Studio-Suites-King-Bed.jpg
-                            -
-                                image: ''
             -
                 heading: ONE BEDROOM SUITE
                 rooms:
@@ -141,9 +136,8 @@ blocks:
                             more enjoy a 60-minute signature massage for two.
                         images:
                             -
-                                image: /uploads/one-bedroom-suites.jpg
-                            -
-                                image: /uploads/one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Bedroom.jpg
                             -
                                 image: /uploads/one-bedroom-suites.jpg
                         tour-pic: /uploads/floorplan-1br.jpeg
@@ -169,11 +163,11 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         images:
                             -
-                                image: /uploads/one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Lagoon-Access.jpg
                             -
-                                image: /uploads/one-bedroom-suites.jpg
-                            -
-                                image: /uploads/one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Lagoon-Access-Terrace.JPG
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
@@ -198,11 +192,7 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         images:
                             -
-                                image: /uploads/one-bedroom-suites.jpg
-                            -
-                                image: /uploads/one-bedroom-suites.jpg
-                            -
-                                image: /uploads/one-bedroom-suites.jpg
+                                image: /uploads/rooms/Studio-Suites-King-Bed.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: TWO BEDROOM SUITE
