Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -164,9 +164,6 @@ blocks:
                         images:
                             -
                                 image: >-
-                                    /uploads/rooms/One-Bedroom-Suite-Lagoon-Access.jpg
-                            -
-                                image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Lagoon-Access-Terrace.JPG
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
@@ -214,11 +211,9 @@ blocks:
                             that reflect Bali’s artisanal heritage.
                         images:
                             -
-                                image: /uploads/two-bedroom-suites.jpg
+                                image: /uploads/rooms/Two-Bedroom-Suite.jpg
                             -
-                                image: /uploads/two-bedroom-suites.jpg
-                            -
-                                image: /uploads/two-bedroom-suites.jpg
+                                image: /uploads/rooms/Lagoon-Access.jpg
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
@@ -244,9 +239,8 @@ blocks:
                             -
                                 image: /uploads/two-bedroom-suites.jpg
                             -
-                                image: /uploads/two-bedroom-suites.jpg
-                            -
-                                image: /uploads/two-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/Two-Bedroom-Suite-Oceanview-Bathroom.jpg
                         tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
@@ -271,9 +265,11 @@ blocks:
                             -
                                 image: /uploads/premium-one-bedroom-suites.jpg
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/Premium-One-Bedroom-Suite-bedroom.jpg
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/Premium-One-Bedroom-Suite-Bathroom.jpg
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
@@ -287,11 +283,10 @@ blocks:
                         content: ''
                         images:
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/Premium-One-Bedroom-Suite-bedroom.jpg
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
-                            -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: /uploads/serene-lagoon-upgrade.jpg
                         tour-pic: /uploads/tour-placeholder.avif
                     -
                         name: Garden View King
@@ -305,11 +300,8 @@ blocks:
                         content: ''
                         images:
                             -
-                                image: /uploads/premium-one-bedroom-suites.jpg
-                            -
-                                image: /uploads/premium-one-bedroom-suites.jpg
-                            -
-                                image: /uploads/premium-one-bedroom-suites.jpg
+                                image: >-
+                                    /uploads/rooms/Premium-One-Bedroom-Suite-bedroom.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: PRIVATE villas
@@ -332,9 +324,11 @@ blocks:
                             waves becomes a backdrop to your peaceful haven.
                         images:
                             -
-                                image: /uploads/private-beach-villa.jpg
+                                image: /uploads/rooms/Beach-Villa-Bedroom.jpg
                             -
-                                image: /uploads/private-beach-villa.jpg
+                                image: /uploads/rooms/Beach-Villa-Bathroom.jpg
+                            -
+                                image: /uploads/rooms/Beach-Villa-Livingroom.jpg
                             -
                                 image: /uploads/private-beach-villa.jpg
                         tour-pic: /uploads/beachvilla-floorplan.jpeg
@@ -349,11 +343,15 @@ blocks:
                         content: ''
                         images:
                             -
-                                image: /uploads/private-beach-villa.jpg
+                                image: /uploads/rooms/Garden-Villa-Private-Pool.jpg
                             -
-                                image: /uploads/private-beach-villa.jpg
+                                image: /uploads/rooms/Garden-Villa-Livingroom.jpg
                             -
-                                image: /uploads/private-beach-villa.jpg
+                                image: /uploads/rooms/Garden-Villa-Dining-Room.jpg
+                            -
+                                image: /uploads/rooms/Garden-Villa-Bedroom.jpg
+                            -
+                                image: /uploads/rooms/Garden-Villa-Bathroom.jpg
                         tour-pic: /uploads/regentbalicanggu-gardenvilla-1.jpeg
             -
                 heading: PENTHOUSE
@@ -377,6 +375,14 @@ blocks:
                         images:
                             -
                                 image: /uploads/penthouse.jpg
+                            -
+                                image: /uploads/oceanfront-penthouse.jpg
+                            -
+                                image: /uploads/rooms/Penthouse-Bedroom---Twin.JPG
+                            -
+                                image: /uploads/rooms/Penthouse-Bedroom.jpg
+                            -
+                                image: /uploads/rooms/Penthouse-Cabana.JPG
                         tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
