Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -60,10 +60,15 @@ blocks:
                             -
                                 image: /uploads/rooms/Studio-Suites-Ocean-View.jpg
                             -
+                                image: /uploads/rooms/Studio-Suites-King-Bed.jpg
+                            -
+                                image: /uploads/rooms/Studio-Suites-Bathroom.jpg
+                            -
                                 image: >-
                                     /uploads/rooms/Studio-Suites-Personal-Havens.jpg
                             -
-                                image: /uploads/rooms/Studio-Suites-Terrace.jpg
+                                image: >-
+                                    /uploads/rooms/Studio-Suites-Refreshment-Gallery.jpg
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
                         name: Lagoon Access Twin
@@ -87,8 +92,20 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         images:
                             -
+                                image: /uploads/rooms/Studio-Suites-Bedroom.jpg
+                            -
+                                image: /uploads/rooms/Studio-Suites-King-Bed.jpg
+                            -
                                 image: >-
                                     /uploads/rooms/Studio-Suite-Lagoon-Access-Terrace.JPG
+                            -
+                                image: >-
+                                    /uploads/rooms/Studio-Suites-Bathroom-Bathtub.jpg
+                            -
+                                image: /uploads/rooms/Studio-Suites-Bathroom.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/Studio-Suites-Personal-Havens.jpg
                         tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
@@ -114,6 +131,18 @@ blocks:
                         images:
                             -
                                 image: /uploads/rooms/Studio-Suites-King-Bed.jpg
+                            -
+                                image: /uploads/studio-suites-1.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/Studio-Suites-Bathroom-Bathtub.jpg
+                            -
+                                image: /uploads/rooms/Studio-Suites-Bathroom.jpg
+                            -
+                                image: /uploads/rooms/Studio-Suites-Terrace.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/Studio-Suites-Refreshment-Gallery.jpg
             -
                 heading: ONE BEDROOM SUITE
                 rooms:
