Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -165,6 +165,11 @@ blocks:
                                     /uploads/rooms/One-Bedroom-Suite-Oceanview-Bedroom.jpg
                             -
                                 image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
+                            -
+                                image: ''
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
@@ -188,8 +193,16 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
                         images:
                             -
+                                image: /uploads/rooms/One-Bedroom-Suite-Bedroom.jpg
+                            -
                                 image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Lagoon-Access-Terrace.JPG
+                            -
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Lagoon-Access.jpg
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
@@ -215,6 +228,11 @@ blocks:
                         images:
                             -
                                 image: /uploads/rooms/Studio-Suites-King-Bed.jpg
+                            -
+                                image: /uploads/one-bedroom-suites.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: TWO BEDROOM SUITE
