--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -168,8 +168,6 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
-                            -
-                                image: ''
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
@@ -257,6 +255,11 @@ blocks:
                                 image: /uploads/rooms/Two-Bedroom-Suite.jpg
                             -
                                 image: /uploads/rooms/Lagoon-Access.jpg
+                            -
+                                image: /uploads/rooms/Two-Bedroom-Suite-Bedroom.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/Two-Bedroom-Suite-Oceanview-Bathroom.jpg
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
@@ -284,6 +287,10 @@ blocks:
                                     /uploads/rooms/Two-Bedroom-Suite-Oceanview-Bathroom.jpg
                             -
                                 image: /uploads/two-bedroom-suites.jpg
+                            -
+                                image: /uploads/rooms/Two-Bedroom-Suite-Bedroom.jpg
+                            -
+                                image: /uploads/rooms/Two-Bedroom-Suite.jpg
                         tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
@@ -345,6 +352,11 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/Premium-One-Bedroom-Suite-bedroom.jpg
+                            -
+                                image: /uploads/premium-one-bedroom-suites.jpg
+                            -
+                                image: >-
+                                    /uploads/rooms/Premium-One-Bedroom-Suite-Bathroom.jpg
                         tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: PRIVATE villas
