Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -231,7 +231,7 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
-                        tour-pic: /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/rooms/floorplan-One-Bedroom-Suite.jpg
             -
                 heading: TWO BEDROOM SUITE
                 rooms:
@@ -337,7 +337,8 @@ blocks:
                                     /uploads/rooms/Premium-One-Bedroom-Suite-bedroom.jpg
                             -
                                 image: /uploads/serene-lagoon-upgrade.jpg
-                        tour-pic: /uploads/tour-placeholder.avif
+                        tour-pic: >-
+                            /uploads/rooms/floorplan-Premium-One-Bedroom-Suite.jpg
                     -
                         name: Garden View King
                         size: 1163
@@ -357,7 +358,7 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/Premium-One-Bedroom-Suite-Bathroom.jpg
-                        tour-pic: /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/premium-floorplan-dpscr.jpeg
             -
                 heading: PRIVATE villas
                 rooms:
