--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -70,6 +70,10 @@ blocks:
                                 image: >-
                                     /uploads/rooms/Studio-Suites-Refreshment-Gallery.jpg
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                     -
                         name: Lagoon Access Twin
                         size: 818
@@ -107,6 +111,10 @@ blocks:
                                 image: >-
                                     /uploads/rooms/Studio-Suites-Personal-Havens.jpg
                         tour-pic: /uploads/rooms/floorplan-Studio-Suite.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                     -
                         name: Studio Suite King
                         size: 818
@@ -128,6 +136,10 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         tour-pic: /uploads/tour-placeholder.avif
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         images:
                             -
                                 image: /uploads/rooms/Studio-Suites-King-Bed.jpg
@@ -168,6 +180,10 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
@@ -201,6 +217,10 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Lagoon-Access.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
@@ -231,6 +251,10 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/One-Bedroom-Suite-Oceanview-Bathroom.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/rooms/floorplan-One-Bedroom-Suite.jpg
             -
                 heading: TWO BEDROOM SUITE
@@ -260,6 +284,10 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/Two-Bedroom-Suite-Oceanview-Bathroom.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
@@ -291,6 +319,10 @@ blocks:
                                 image: /uploads/rooms/Two-Bedroom-Suite-Bedroom.jpg
                             -
                                 image: /uploads/rooms/Two-Bedroom-Suite.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
@@ -320,6 +352,10 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/Premium-One-Bedroom-Suite-Bathroom.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
@@ -337,6 +373,10 @@ blocks:
                                     /uploads/rooms/Premium-One-Bedroom-Suite-bedroom.jpg
                             -
                                 image: /uploads/serene-lagoon-upgrade.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: >-
                             /uploads/rooms/floorplan-Premium-One-Bedroom-Suite.jpg
                     -
@@ -358,6 +398,10 @@ blocks:
                             -
                                 image: >-
                                     /uploads/rooms/Premium-One-Bedroom-Suite-Bathroom.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
             -
                 heading: PRIVATE villas
@@ -387,6 +431,10 @@ blocks:
                                 image: /uploads/rooms/Beach-Villa-Livingroom.jpg
                             -
                                 image: /uploads/private-beach-villa.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/beachvilla-floorplan.jpeg
                     -
                         name: Garden Pool Villa
@@ -408,6 +456,10 @@ blocks:
                                 image: /uploads/rooms/Garden-Villa-Bedroom.jpg
                             -
                                 image: /uploads/rooms/Garden-Villa-Bathroom.jpg
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/regentbalicanggu-gardenvilla-1.jpeg
             -
                 heading: PENTHOUSE
@@ -439,6 +491,10 @@ blocks:
                                 image: /uploads/rooms/Penthouse-Bedroom.jpg
                             -
                                 image: /uploads/rooms/Penthouse-Cabana.JPG
+                        extra-buttons:
+                            -
+                                text: Virtual Tour
+                                link: /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
